--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -181,6 +181,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
              android:label="@string/app_name"   
+             android:theme="@android:style/Theme.Holo.Light"
              />
         <activity
             android:name="org.witness.informacam.app.HomeActivity"
